# StarBreaker

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml.example
.github/workflows/: ci.yml  release.yml
app/: .oxlintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  globals.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: audio_commands.rs  commands.rs  datacore_commands.rs  decomposed_commands.rs  error.rs  main.rs  scene_commands.rs  state.rs  ui_sink.rs
app/src/components/: dds-preview.tsx  flight-cam-hud.tsx  geometry-preview.tsx  image-pan-zoom.tsx  image-preview.tsx  material-inspector.tsx  projection-mode-picker.tsx  resize-handle.tsx  scene-viewer.tsx  sidebar.tsx  soc-scene-viewer.tsx  socpak-tree.tsx  startup-dialog.tsx  update-banner.tsx  xml-preview.tsx
app/src/lib/: commands.ts  decomposed-loader.ts  flight-camera.ts  perf.ts  screenshot.ts
app/src/stores/: app-store.ts  audio-store.ts  datacore-store.ts  export-store.ts
app/src/views/: audio-view.tsx  datacore-browser.tsx  export-view.tsx  p4k-browser.tsx  scene-view.tsx
blender_addon/: AGENTS.md  README.md
blender_addon/starbreaker_addon/: manifest.py  palette.py  runtime.py  templates.py  ui.py
blender_addon/starbreaker_addon/resources/: material_template_contract.json  material_templates.blend  pom_library.blend  pom_library.blend1
blender_addon/starbreaker_addon/runtime/: __init__.py  _legacy.py  constants.py  node_utils.py  package_ops.py  palette_utils.py  record_utils.py  validators.py
blender_addon/tests/: test_contract_seed.py  test_decal_offset.py  test_layers.py  test_lights.py  test_manifest.py  test_material_contract.py  test_package_ops.py  test_palette.py  test_pom_detail.py  test_scene_instances.py  test_shader_inventory.py  test_templates.py
cli/: Cargo.toml
cli/examples/: crack_chf_hashes.rs
cli/src/: chf.rs  common.rs  cryxml.rs  dcb.rs  dds.rs  entity.rs  error.rs  glb.rs  main.rs  p4k.rs  skin.rs  socpak.rs  wwise.rs
crates/starbreaker-3d/: Cargo.toml
crates/starbreaker-3d/examples/: convert.rs  p4k_skin_to_glb.rs  test_animated_glb.rs  test_dba.rs  test_skinned_glb.rs
crates/starbreaker-3d/src/: decomposed.rs  error.rs  lib.rs  mtl.rs  pipeline.rs  skeleton.rs  socpak.rs  types.rs
crates/starbreaker-3d/tests/: exec_hangar_render_smoke.rs  exec_hangar_smoke.rs  gltf_test.rs  pipeline_integration_test.rs  scene_catalog_smoke.rs
crates/starbreaker-chf/: Cargo.toml
crates/starbreaker-chf/examples/: download.rs
crates/starbreaker-chf/src/: chf_data.rs  container.rs  dna.rs  error.rs  itemport.rs  lib.rs  material.rs  read_helpers.rs
crates/starbreaker-chf/tests/: bulk_test.rs  dna_test.rs  v8_roundtrip.rs
crates/starbreaker-chunks/: Cargo.toml
crates/starbreaker-chunks/src/: chunk_file.rs  error.rs  known_types.rs  lib.rs  types.rs
crates/starbreaker-chunks/tests/: chunks_test.rs
crates/starbreaker-common/: Cargo.toml
crates/starbreaker-common/benches/: span_reader.rs
crates/starbreaker-common/src/: color.rs  discover.rs  error.rs  guid.rs  lib.rs  name_hash.rs  progress.rs  reader.rs  writer.rs
crates/starbreaker-common/tests/: color_test.rs  guid_test.rs  name_hash_test.rs  reader_test.rs  writer_test.rs
crates/starbreaker-cryxml/: Cargo.toml
crates/starbreaker-cryxml/src/: cryxml.rs  error.rs  lib.rs  types.rs
crates/starbreaker-cryxml/tests/: cryxml_test.rs
crates/starbreaker-datacore/: Cargo.toml
crates/starbreaker-datacore/benches/: datacore.rs
crates/starbreaker-datacore/examples/: bench_export.rs  bench_parallel.rs  dump_json.rs  dump_xml.rs  inspect.rs  query_showcase.rs  search_paint.rs  weapon_alpha.rs
crates/starbreaker-datacore/src/: database.rs  dcb_builder.rs  enums.rs  error.rs  lib.rs  loadout.rs  reader.rs  sink.rs  types.rs  walker.rs
crates/starbreaker-datacore/src/export/: json.rs  mod.rs  unp4k_xml.rs  xml.rs
crates/starbreaker-datacore/src/query/: compile.rs  execute.rs  from_datacore.rs  mod.rs  path.rs  value.rs
crates/starbreaker-datacore/tests/: database_test.rs  export_json_test.rs  query_compile_test.rs  query_execute_test.rs  query_from_datacore_test.rs  query_integration_test.rs  query_path_test.rs  reader_test.rs  test_helpers.rs  types_test.rs  walker_test.rs
crates/starbreaker-dds/: Cargo.toml
crates/starbreaker-dds/src/: dds_file.rs  decode.rs  error.rs  lib.rs  sibling.rs  types.rs
crates/starbreaker-dds/tests/: dds_test.rs
crates/starbreaker-gltf/: Cargo.toml
crates/starbreaker-gltf/examples/: convert.rs  dump_bones.rs  dump_mtl.rs  dump_nmc.rs  dump_obj.rs  entity_to_glb.rs  export_all.rs  find_colorful_mtl.rs  p4k_skin_to_glb.rs  profile_idris.rs  socpak_to_glb.rs
crates/starbreaker-gltf/src/: error.rs  glb_builder.rs  gltf.rs  included_objects.rs  lib.rs  mtl.rs  pipeline.rs  skeleton.rs  types.rs
crates/starbreaker-gltf/src/ivo/: skin.rs
crates/starbreaker-gltf/tests/: gltf_test.rs  pipeline_integration_test.rs
crates/starbreaker-p4k/: Cargo.toml
crates/starbreaker-p4k/examples/: search_p4k.rs
crates/starbreaker-p4k/src/: archive.rs  crypto.rs  (+5 more)
crates/starbreaker-wem/: Cargo.toml
crates/starbreaker-wwise/: Cargo.toml
crates/starbreaker-wwise/examples/: debug_atl.rs  dump_bnk.rs  hirc_census.rs
crates/starbreaker-wwise/src/: atl.rs  bkhd.rs  bnk.rs  datacore_audio.rs  didx.rs  error.rs  fnv.rs  lib.rs  section.rs  stid.rs
crates/starbreaker-wwise/src/hirc/: action.rs  attenuation.rs  bus.rs  containers.rs  event.rs  misc.rs  mod.rs  modulator.rs  music.rs  node_base.rs  props.rs  rtpc.rs  sound.rs  vlq.rs
docs/: blender-material-slot-evidence.md  decomposed-export-contract.md
mcp/: Cargo.toml
mcp/src/: tools.rs
src/StarBreaker.DataCore/: DataCoreBinaryJson.cs  DataCoreBinaryXml.cs  DataCoreDatabase.cs
src/StarBreaker.P4k/: P4kFileSystem.cs
src/StarBreaker.Sandbox/: P4kSandbox.cs
(+58 files in other folders)
