[package]
name = "starbreaker-cli"
version.workspace = true
edition = "2024"

[[bin]]
name = "starbreaker-cli"
path = "src/main.rs"

[dependencies]
starbreaker-common = { path = "../crates/starbreaker-common" }
starbreaker-wwise = { path = "../crates/starbreaker-wwise" }
starbreaker-wem = { path = "../crates/starbreaker-wem" }
starbreaker-chunks = { path = "../crates/starbreaker-chunks" }
starbreaker-chf = { path = "../crates/starbreaker-chf" }
crc32c = "0.6"
starbreaker-p4k = { path = "../crates/starbreaker-p4k" }
starbreaker-datacore = { path = "../crates/starbreaker-datacore" }
starbreaker-gltf = { path = "../crates/starbreaker-gltf" }
starbreaker-cryxml = { path = "../crates/starbreaker-cryxml" }
starbreaker-dds = { path = "../crates/starbreaker-dds" }

clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
indicatif = "0.17"
regex = "1"
glob-match = "0.2"
rayon = "1.11"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1.0.149"
