[package]
name = "starbreaker-app"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
starbreaker-p4k = { path = "../../crates/starbreaker-p4k" }
starbreaker-common = { path = "../../crates/starbreaker-common" }
starbreaker-datacore = { path = "../../crates/starbreaker-datacore" }
starbreaker-gltf = { path = "../../crates/starbreaker-gltf" }
starbreaker-wwise = { path = "../../crates/starbreaker-wwise" }
starbreaker-wem = { path = "../../crates/starbreaker-wem" }
tokio = { version = "1", features = ["rt"] }
rayon = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
