[package]
name = "starbreaker-common"
version.workspace = true
edition = "2024"

[dependencies]
zerocopy = { version = "0.8", features = ["derive"] }
thiserror = "2"
crc32c = "0.6"
serde = { version = "1", features = ["derive"] }
parking_lot = { workspace = true }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "span_reader"
harness = false
