[package]
name = "starbreaker-datacore"
version = "0.1.0"
edition = "2024"

[dependencies]
starbreaker-common = { path = "../starbreaker-common" }
zerocopy = { version = "0.8", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
rustc-hash = "2"
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
rayon = "1.10"
log = "0.4"
memmap2 = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
starbreaker-p4k = { path = "../starbreaker-p4k" }

[[bench]]
name = "datacore"
harness = false
